--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -1,14 +1,44 @@
 .direction {
+  position: relative;
+  padding-bottom: 271px;
+  padding-top: 55px;
+
   &__box {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    height: 446px;
     width: 266px;
     padding-right: 5px;
     border-radius: 8px;
   }
+  &__svg1 {
+    position: absolute;
+    top: 0;
+    left: 404px;
+    fill: #fdd08d;
+  }
 
-  &__title {
+  // !!! заливка свг градиентом
+  &__svg2 {
+    position: absolute;
+    top: 403px;
+    left: -76px;
+    fill: #fdd08d;
+  }
+
+  &__svg3 {
+    position: absolute;
+    top: 641px;
+    left: 717px;
+    fill: #fdd08d;
+  }
+  &__caption {
+    display: inline-block;
+    margin-bottom: 56px;
     font-weight: bold;
-    font-size: 19px;
-    line-height: 1.58;
+    font-size: 36px;
+    line-height: 1.39;
 
     color: $title-color;
   }
@@ -16,16 +46,59 @@
   &__list {
     display: flex;
   }
+
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__link {
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 3.53;
+
+    color: $accent-color;
+  }
+
+  &__all {
+    display: inline-block;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 1.87;
+    color: $accent-color;
+  }
+  &__title {
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 1.58;
+
+    margin-bottom: 13px;
+
+    color: $title-color;
+  }
+
+  &__excerpt {
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 1.73;
+    color: $text-color;
+  }
+  &__box {
+    position: relative;
+    margin-right: 20px;
+  }
+  &__image {
+    overflow: hidden;
+    width: 261px;
+    height: 330px;
+    border: 2px solid red;
+    border-radius: 8px;
+  }
 }
 
-.direction__box {
-  margin-right: 20px;
-}
-
-.direction__image {
-  overflow: hidden;
-  width: 261px;
-  height: 330px;
-  border: 2px solid red;
-  border-radius: 8px;
+.item__wrap {
+  background-color: white;
+  position: absolute;
+  left: 0;
+  top: 231px;
 }
