--- a/css/main.css
+++ b/css/main.css
@@ -52,16 +52,56 @@ img {
   height: auto;
 }
 
+.direction {
+  position: relative;
+  padding-bottom: 271px;
+  padding-top: 55px;
+}
+
 .direction__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  height: 446px;
   width: 266px;
   padding-right: 5px;
   border-radius: 8px;
 }
 
-.direction__title {
+.direction__svg1 {
+  position: absolute;
+  top: 0;
+  left: 404px;
+  fill: #fdd08d;
+}
+
+.direction__svg2 {
+  position: absolute;
+  top: 403px;
+  left: -76px;
+  fill: #fdd08d;
+}
+
+.direction__svg3 {
+  position: absolute;
+  top: 641px;
+  left: 717px;
+  fill: #fdd08d;
+}
+
+.direction__caption {
+  display: inline-block;
+  margin-bottom: 56px;
   font-weight: bold;
-  font-size: 19px;
-  line-height: 1.58;
+  font-size: 36px;
+  line-height: 1.39;
   color: #000000;
 }
 
@@ -71,7 +111,47 @@ img {
   display: flex;
 }
 
+.direction__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.direction__link {
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 3.53;
+  color: #fb8f1d;
+}
+
+.direction__all {
+  display: inline-block;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 1.87;
+  color: #fb8f1d;
+}
+
+.direction__title {
+  font-weight: bold;
+  font-size: 19px;
+  line-height: 1.58;
+  margin-bottom: 13px;
+  color: #000000;
+}
+
+.direction__excerpt {
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 1.73;
+  color: #7d7987;
+}
+
 .direction__box {
+  position: relative;
   margin-right: 20px;
 }
 
@@ -81,5 +161,12 @@ img {
   height: 330px;
   border: 2px solid red;
   border-radius: 8px;
+}
+
+.item__wrap {
+  background-color: white;
+  position: absolute;
+  left: 0;
+  top: 231px;
 }
 /*# sourceMappingURL=main.css.map */
