--- a/sass/utilits/_variables.scss
+++ b/sass/utilits/_variables.scss
@@ -2,6 +2,9 @@ $title-color: #000000;
 $text-color: #7d7987;
 $accent-color: #fb8f1d;
 
+body {
+  font-family: Inter, sans-serif;
+}
 *,
 *::before,
 *::after {
