--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,26 @@ img {
   padding-top: 55px;
 }
 
+.direction::before {
+  content: "";
+  position: absolute;
+  left: -76px;
+  top: 403px;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/svg-circle.svg);
+}
+
+.direction::after {
+  content: "";
+  position: absolute;
+  left: 404px;
+  top: 0px;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/svg-plus.svg);
+}
+
 .direction__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -109,6 +129,7 @@ img {
 }
 
 .direction__caption {
+  position: relative;
   margin-bottom: 56px;
   font-weight: bold;
   font-size: 36px;
@@ -120,6 +141,17 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+}
+
+.direction__list::after {
+  content: "";
+  position: absolute;
+  right: 366px;
+  bottom: -55px;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/svg-circle.svg);
 }
 
 .direction__link {
