--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -2,7 +2,30 @@
   position: relative;
   padding-bottom: 271px;
   padding-top: 55px;
+  &::before {
+    content: "";
+    position: absolute;
 
+    left: -76px;
+    top: 403px;
+
+    width: 20px;
+    height: 20px;
+
+    background-image: url(../images/svg-circle.svg);
+  }
+  &::after {
+    content: "";
+    position: absolute;
+
+    left: 404px;
+    top: 0px;
+
+    width: 20px;
+    height: 20px;
+
+    background-image: url(../images/svg-plus.svg);
+  }
   &__box {
     display: flex;
     flex-direction: column;
@@ -11,33 +34,13 @@
     width: 266px;
     border-radius: 8px;
   }
-  &__svg1 {
-    position: absolute;
-    top: 0;
-    left: 404px;
-    fill: #fdd08d;
-  }
-
-  // !!! заливка свг градиентом
-  &__svg2 {
-    position: absolute;
-    top: 403px;
-    left: -76px;
-    fill: #fdd08d;
-  }
-
-  &__svg3 {
-    position: absolute;
-    top: 641px;
-    left: 717px;
-    fill: #fdd08d;
-  }
 
   &__wrap {
     display: flex;
     justify-content: space-between;
   }
   &__caption {
+    position: relative;
     margin-bottom: 56px;
     font-weight: bold;
     font-size: 36px;
@@ -48,6 +51,19 @@
 
   &__list {
     display: flex;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+
+      right: 366px;
+      bottom: -55px;
+
+      width: 20px;
+      height: 20px;
+
+      background-image: url(../images/svg-circle.svg);
+    }
   }
 
   &__link {
